--- a/weatherStyle.css
+++ b/weatherStyle.css
@@ -15,12 +15,13 @@ body{
 }
 
 .week{
-    display: flex;
-    justify-content: center;
-    flex-direction: row;
     background-color: rgba(172, 224, 235, 0.50);
     width: 750px;
     border-radius: 0 0 20px 20px;
+    height: 195px;
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
 }
 
 .days{
